Added yaml configuration, more documentation to notebook

--- a/parquet_arrow_ingestion.ipynb
+++ b/parquet_arrow_ingestion.ipynb
@@ -18,9 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
-    "import neo4j_pq_v2 as npq\n",
-    "import neo4j_arrow_v2 as na\n",
+    "import time, yaml\n",
+    "import neo4j_pq as npq\n",
+    "import neo4j_arrow as na\n",
     "import pyarrow as pa\n",
     "from pyarrow import parquet as pq\n",
     "from time import sleep"
@@ -34,16 +34,76 @@
    },
    "cell_type": "markdown",
    "id": "a5523c63",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Managing large datasets with Apache Arrow\n",
     "\n",
-    "One of the main capibilities of Apache Arrow is the ability to deal with memory-mapped files.<br>\n",
-    "This allows Arrow to read datasets that are bigger than the available RAM without incurring any additional memory cost.<br>\n",
-    "With the PyArrow ParquetDataset module, we can create a dataset of memory-map parquet files located in different filesystems, <br>\n",
-    "This ParquetDataset can then be fragmented and processed in batches.\n",
+    "<p>One of the main capibilities of Apache Arrow is the ability to deal with <strong>memory-mapped files</strong>,<br>\n",
+    "this allows Arrow to read datasets that are bigger than the available RAM without incurring any additional memory cost.<br>\n",
     "\n",
+    "With the PyArrow ParquetDataset module we can create a dataset of memory-map parquet files, it can then be fragmented and processed in batches. <br>\n",
+    "    \n",
+    "In adition to local storage, PyArrow also supports cloud object storage such as:\n",
+    "<ul>\n",
+    "  <li>Amazon Simple Storage (S3)</li>\n",
+    "  <li>Google Cloud Storage (GCS)</li>\n",
+    "  <li>Microsoft Azure Blob Storage</li>\n",
+    "</ul>\n",
+    "<p>\n",
+    " \n",
     "![snip_test.PNG](attachment:snip_test.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b729ecb-d1e6-4235-a5c8-49e270664f73",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Define your configuration\n",
+    "<p>The <strong>config.yaml</strong> file sets the configuration values for: \n",
+    "<ul>\n",
+    "  <li>Neo4j Database</li>\n",
+    "  <li>Dataset</li>\n",
+    "  <li>Workers</li>\n",
+    "</ul>\n",
+    "<p>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5a879daf-5dda-41b9-bfdb-62ca5202c282",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "neo4j:\n",
+      "  host: 34.172.112.204\n",
+      "  port: 8491\n",
+      "  user: neo4j\n",
+      "  password: '!twittertest'\n",
+      "  tls: false\n",
+      "  concurrency: 50\n",
+      "  database: users200m\n",
+      "dataset:\n",
+      "  node_parquet_files_uri: gs://yan-users-export/pqdataset/nodes\n",
+      "  relationship_parquet_files_uri: gs://yan-users-export/pqdataset/relationships\n",
+      "worker:\n",
+      "  concurrency: 50\n",
+      "  arrow_table_size: 1000000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "config = yaml.safe_load(open('config.yaml'))\n",
+    "print(yaml.dump(config, default_flow_style=False, sort_keys=False))"
    ]
   },
   {
@@ -51,50 +111,81 @@
    "id": "dbb8c7d1-b8c5-4b62-bf3d-dd79febaa901",
    "metadata": {},
    "source": [
-    "## Lets sample our ParquetDataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "b468104d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "node_parquet_files_uri = 'gs://yan-users-export/pqdataset/nodes/'\n",
-    "edge_parquet_files_uri = 'gs://yan-users-export/pqdataset/relationships/'\n",
+    "## Let's sample our PyArrow ParquetDataset\n",
     "\n",
-    "nodes_dataset = pq.ParquetDataset(node_parquet_files_uri, use_legacy_dataset=False)\n",
-    "edges_dataset = pq.ParquetDataset(edge_parquet_files_uri, use_legacy_dataset=False)"
+    "<p>Using the config.yml dataset uri values, we create our nodes_dataset & edges_dataset using pyarrow ParquetDataset module.<br>\n",
+    "One Important requirement is that your file uri values contains the <strong>nodes & relationships</strong> string.<br>\n",
+    "In your storage environment you can have sub-folders per node label and relationship type, pyarrow will automatically detect nested structures.\n",
+    "<p>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9901ed44",
+   "id": "b468104d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(57, 310)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "node_work = [fragment for fragment in nodes_dataset.fragments]\n",
-    "edge_work = [fragment for fragment in edges_dataset.fragments]\n",
-    "len(node_work), len(edge_work)\n",
-    "#print(\"RSS (RAM): {}MB\".format(pa.total_allocated_bytes() >> 20))"
+    "node_parquet_files_uri = config['dataset']['node_parquet_files_uri']\n",
+    "relationship_parquet_files_uri = config['dataset']['relationship_parquet_files_uri']\n",
+    "\n",
+    "nodes_dataset = pq.ParquetDataset(node_parquet_files_uri, use_legacy_dataset=False)\n",
+    "rels_dataset = pq.ParquetDataset(relationship_parquet_files_uri, use_legacy_dataset=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e94b124b-7aeb-42fc-9baf-2faa4acf6695",
+   "metadata": {},
+   "source": [
+    "#### Once our datasets are created we can break them into memory-mapped Fragments, this can also be done at no additional memory cost"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "9901ed44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated 57 node dataset fragments and 310 relationship fragments\n"
+     ]
+    }
+   ],
+   "source": [
+    "node_work = [fragment for fragment in nodes_dataset.fragments]\n",
+    "relationship_work = [fragment for fragment in rels_dataset.fragments]\n",
+    "print(f\"Generated {len(node_work)} node dataset fragments and {len(relationship_work)} relationship fragments\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad32ab55-5d12-4d7f-8711-43ae1371756c",
+   "metadata": {},
+   "source": [
+    "#### You can convert a node dataset Fragment to an arrow table using the to_table() method\n",
+    "\n",
+    "<p> The Neo4j server expects the arrow node records to adhere to a specific order and schema:\n",
+    "<ul>\n",
+    "  <li>The first column represents the node identifier</li>\n",
+    "    <ul>\n",
+    "        <li>Supported types: <strong>Integer, String<strong></li><br>\n",
+    "    </ul>\n",
+    "  <li>The second column represents the node labels</li>\n",
+    "    <ul>\n",
+    "        <li>Supported types: <strong>String, Integer or List of String</strong></li><br>\n",
+    "    </ul>    \n",
+    "  <li>Any aditional column is interpreted as a node property</li>  \n",
+    "</ul>\n",
+    "<p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "48a0aea3",
    "metadata": {},
    "outputs": [
@@ -116,12 +207,28 @@
    ],
    "source": [
     "print(node_work[0].to_table())\n",
-    "print(\"RSS (RAM): {}MB\".format(pa.total_allocated_bytes() >> 20))"
+    "print(\"RSS (RAM): {}MB\".format(pa.total_allocated_bytes() >> 20))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0c84102-b422-464b-9079-0990dcfdd22a",
+   "metadata": {},
+   "source": [
+    "#### You can convert a relationship dataset Fragment to an arrow table using the to_table() method\n",
+    "<p> The Neo4j server expects the arrow relationship records to adhere to a specific order and schema:\n",
+    "<ul>\n",
+    "  <li>The first column represents the source node identifier</li>\n",
+    "  <li>The second column represents the target node identifier</li> \n",
+    "  <li>The third column represents the relationship type</li>\n",
+    "  <li>Any additional column is interpreted as a relationship property</li>  \n",
+    "</ul>\n",
+    "<p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d8d8af82",
    "metadata": {},
    "outputs": [
@@ -144,7 +251,7 @@
     }
    ],
    "source": [
-    "print(edge_work[0].to_table())\n",
+    "print(relationship_work [0].to_table())\n",
     "print(\"RSS (RAM): {}MB\".format(pa.total_allocated_bytes() >> 20))"
    ]
   },
@@ -157,12 +264,45 @@
     "\n",
     "We build little work tasks for our worker pool.\n",
     "\n",
-    "Each task contains the PyArrow RecordBatch as well as schema details."
+    "Each task contains the PyArrow ParquetDataset Fragment, each Fragment gets broken into RecordBatches of the size defined in our configuration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "id": "9af8a0ff-c5d0-4091-8d24-d324bfd4fb69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "neo4j:\n",
+      "  host: 34.172.112.204\n",
+      "  port: 8491\n",
+      "  user: neo4j\n",
+      "  password: '!twittertest'\n",
+      "  tls: false\n",
+      "  concurrency: 50\n",
+      "  database: users200m\n",
+      "dataset:\n",
+      "  node_parquet_files_uri: gs://yan-users-export/pqdataset/nodes\n",
+      "  relationship_parquet_files_uri: gs://yan-users-export/pqdataset/relationships\n",
+      "worker:\n",
+      "  concurrency: 50\n",
+      "  arrow_table_size: 1000000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "config = yaml.safe_load(open('config.yaml'))\n",
+    "print(yaml.dump(config, default_flow_style=False, sort_keys=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "6aa35562",
    "metadata": {},
    "outputs": [
@@ -175,12 +315,13 @@
     }
    ],
    "source": [
-    "client = na.Neo4jArrowClient(host='34.172.112.204', \n",
-    "                             user='neo4j', \n",
-    "                             password='!twittertest',\n",
-    "                             tls=False, \n",
-    "                             concurrency=50, \n",
-    "                             database = 'users200m')\n",
+    "client = na.Neo4jArrowClient(host = config['neo4j']['host'],\n",
+    "                             port = config['neo4j']['port'],\n",
+    "                             user = config['neo4j']['user'], \n",
+    "                             password = config['neo4j']['password'],\n",
+    "                             tls = config['neo4j']['tls'], \n",
+    "                             concurrency = config['neo4j']['concurrency'], \n",
+    "                             database = config['neo4j']['database'])\n",
     "\n",
     "print(f\"Created {client}\")"
    ]
@@ -197,8 +338,7 @@
    "source": [
     "### Let's Build the Graph Database!\n",
     "\n",
-    "Now that we have our `Neo4jArrowClient` and our `PyArrow RecordBatches`, we can\n",
-    "orchestrate our graph database load.\n",
+    "Now that we have our `Neo4jArrowClient`, we can orchestrate our graph database load.\n",
     "\n",
     "![arrow_flow_database.png](attachment:arrow_flow_database.png)"
    ]
@@ -214,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "e0a935f7",
    "metadata": {},
    "outputs": [
@@ -237,16 +377,17 @@
    "metadata": {},
    "source": [
     "#### 2a. Send our Nodes!\n",
-    "We can send data in parallel to speed up ingestion so we'll fan out the node\n",
-    "streams to numerous workers processes.\n",
+    "We can send data in parallel to speed up the ingestion process, we fan out the node\n",
+    "dataset fragments to numerous workers processes.\n",
     "\n",
-    "Each worker will receive a copy of the `Neo4jArrowClient` config use it to\n",
-    "stream data to the Neo4j graph."
+    "Each worker will receive a dataset fragment along with a copy of the `Neo4jArrowClient` config, <br>\n",
+    "each fragment gets broken into RecordBatches of the size defined in our configuration the **default is 1,000,000**\n",
+    "and streamed over to Neo4j using our client."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "4aaa714d",
    "metadata": {},
    "outputs": [
@@ -254,23 +395,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Dataset <class 'pyarrow.parquet.core._ParquetDatasetV2'> created from: gs://yan-users-export/pqdataset/nodes/\n",
+      "Dataset <class 'pyarrow.parquet.core._ParquetDatasetV2'> created from: gs://yan-users-export/pqdataset/nodes\n",
       "Using: 🚀 Neo4jArrowClient{neo4j@34.172.112.204:8491/users200m}\n",
-      "Spawning 50 workers 🧑‍🏭 to process 57 tasks 📋\n",
+      "Spawning 50 workers 🧑‍🏭 to process 57 dataset fragments 📋\n",
       "⚙️ Loading: [➶➶➶]\n",
-      "🏁 Completed in 32.86s\n"
+      "🏁 Completed in 24.8s\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sent: 280,737,646 nodes in 32.86s (~8,544,038 nodes/s, ~1399 MiB/s)\n"
+      "Sent: 280,737,646 nodes in 24.8s (~11,319,266 nodes/s, ~1854 MiB/s)\n"
      ]
     }
    ],
    "source": [
-    "node_results, timing = npq.fan_out(client, node_parquet_files_uri, 50)\n",
+    "node_results, timing = npq.fan_out(client, config['dataset']['node_parquet_files_uri'], config['worker']['arrow_table_size'], config['worker']['concurrency'])\n",
     "\n",
     "total_nodes = sum([x[\"rows\"] for x in node_results])\n",
     "total_bytes = sum([x[\"bytes\"] for x in node_results])\n",
@@ -285,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "f7c83086",
    "metadata": {},
    "outputs": [
@@ -310,14 +451,14 @@
    "id": "d5e419b3",
    "metadata": {},
    "source": [
-    "#### 3a. Feed Edges\n",
-    "Time to stream the edges! Just like before, fan out the workload across a pool\n",
+    "#### 3a. Send our Relationships\n",
+    "Time to stream the Relationships! Just like before, fan out the workload across a pool\n",
     "of worker processes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "6579ae77",
    "metadata": {},
    "outputs": [
@@ -325,23 +466,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Dataset <class 'pyarrow.parquet.core._ParquetDatasetV2'> created from: gs://yan-users-export/pqdataset/relationships/\n",
+      "Dataset <class 'pyarrow.parquet.core._ParquetDatasetV2'> created from: gs://yan-users-export/pqdataset/relationships\n",
       "Using: 🚀 Neo4jArrowClient{neo4j@34.172.112.204:8491/users200m}\n",
-      "Spawning 64 workers 🧑‍🏭 to process 310 tasks 📋\n",
+      "Spawning 50 workers 🧑‍🏭 to process 310 dataset fragments 📋\n",
       "⚙️ Loading: [➶➶➶➶➶➶➶➶➶➶➶]\n",
-      "🏁 Completed in 193.34s\n"
+      "🏁 Completed in 192.34s\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sent: 1,547,592,061 edges in 193.34s (~8,004,701 edges/s, ~1365 MiB/s)\n"
+      "Sent: 1,547,592,061 relationships in 192.34s (~8,046,035 edges/s, ~1372 MiB/s)\n"
      ]
     }
    ],
    "source": [
-    "edge_results, timing = npq.fan_out(client, edge_parquet_files_uri, 64)\n",
+    "edge_results, timing = npq.fan_out(client, config['dataset']['relationship_parquet_files_uri'], config['worker']['arrow_table_size'], config['worker']['concurrency'])\n",
     "\n",
     "total_edges = sum([x[\"rows\"] for x in edge_results])\n",
     "total_bytes = sum([x[\"bytes\"] for x in edge_results])\n",
@@ -350,23 +491,15 @@
     "data_rate = int(total_bytes / timing) >> 20\n",
     "\n",
     "sleep(2)\n",
-    "print(f\"Sent: {total_edges:,} edges in {round(timing, 2)}s (~{edge_rate:,} edges/s, ~{data_rate} MiB/s)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "a5fea88d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#This is curently a hack, used to avoid flight timeout issue with long running ingestion scenarios\n",
+    "print(f\"Sent: {total_edges:,} relationships in {round(timing, 2)}s (~{edge_rate:,} edges/s, ~{data_rate} MiB/s)\")\n",
+    "\n",
+    "# Client object goes stale after very long running ingestion, this is a workaround\n",
     "client.client = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "749a1e95",
    "metadata": {},
    "outputs": [
