Refactor notebook to separate projection vs database creation, refactor neo4j client to handle database & projection creation based on conf

--- a/neo4j_arrow_create_database.ipynb
+++ b/neo4j_arrow_create_database.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "import time, yaml\n",
     "import neo4j_pq as npq\n",
-    "import neo4j_arrow as na\n",
+    "import neo4j_arrow_client as na\n",
     "import pyarrow as pa\n",
     "from pyarrow import parquet as pq\n",
     "from time import sleep"
@@ -158,7 +158,7 @@
    "source": [
     "node_work = [fragment for fragment in nodes_dataset.fragments]\n",
     "relationship_work = [fragment for fragment in rels_dataset.fragments]\n",
-    "print(f\"Generated {len(node_work)} node dataset fragments and {len(relationship_work)} relationship fragments\")\n"
+    "print(f\"Generated {len(node_work)} node dataset fragments and {len(relationship_work)} relationship fragments\")"
    ]
   },
   {
@@ -172,14 +172,15 @@
     "<ul>\n",
     "  <li>The first column represents the node identifier</li>\n",
     "    <ul>\n",
-    "        <li>Supported types: <strong>Integer, String<strong></li><br>\n",
+    "        <li>Supported types: <strong>integer, string<strong></li><br>\n",
     "    </ul>\n",
     "  <li>The second column represents the node labels</li>\n",
     "    <ul>\n",
-    "        <li>Supported types: <strong>String, Integer or List of String</strong></li><br>\n",
+    "        <li>Supported types: <strong>string, integer or string[]</strong></li><br>\n",
     "    </ul>    \n",
     "  <li>Any aditional column is interpreted as a node property</li>  \n",
     "</ul>\n",
+    "More information can be found in: <a href=\"https://neo4j.com/docs/graph-data-science/current/graph-project-apache-arrow/#arrow-send-nodes\">https://neo4j.com/docs/graph-data-science/current/graph-project-apache-arrow/#arrow-send-nodes</a>\n",
     "<p>"
    ]
   },
@@ -200,14 +201,12 @@
       "----\n",
       "user_id: [[\"212240358\",\"173575741\",\"111959947\",\"20054822\",\"12278518\",...,\"158102246\",\"258554135\",\"117876885\",\"101979382\",\"264211898\"],[\"147145884\",\"125036395\",\"84020474\",\"215636498\",\"100879825\",...,\"57493253\",\"131601585\",\"127377942\",\"17872870\",\"73716040\"],...,[\"142199754\",\"222917375\",\"156301279\",\"208879621\",\"65697919\",...,\"178591346\",\"19840886\",\"22326095\",\"114213958\",\"55948038\"],[\"122903861\",\"145062645\",\"20783812\",\"129135084\",\"205683568\",...,\"93461257\",\"185635399\",\"185888633\",\"9849853\",\"224110468\"]]\n",
       "labels: [[\"User\",\"User\",\"User\",\"User\",\"User\",...,\"User\",\"User\",\"User\",\"User\",\"User\"],[\"User\",\"User\",\"User\",\"User\",\"User\",...,\"User\",\"User\",\"User\",\"User\",\"User\"],...,[\"User\",\"User\",\"User\",\"User\",\"User\",...,\"User\",\"User\",\"User\",\"User\",\"User\"],[\"User\",\"User\",\"User\",\"User\",\"User\",...,\"User\",\"User\",\"User\",\"User\",\"User\"]]\n",
-      "name: [[\"Sydney Mante\",\"Kirk Price\",\"Bettie Abshire\",\"Rowan Franecki\",\"Lenora Ryan\",...,\"Edwin Heidenreich\",\"Dr. Paul Prosacco\",\"Uriah Berge\",\"Abbey Bernier\",\"Jorge Gulgowski\"],[\"Perry Corwin\",\"Mr. Wilma Rohan\",\"Rudy Ortiz\",\"Anastasia Abernathy\",\"Eugenia Johnston V\",...,\"Mozelle Schumm\",\"Ruben Schmeler\",\"Monty Blick\",\"Mia Littel\",\"Nat Daugherty\"],...,[\"Braxton McLaughlin\",\"Marlen Gerhold\",\"Flavie Flatley\",\"Berneice Bode\",\"Judson Koch\",...,\"Creola Schuster I\",\"Filomena Ledner\",\"Imogene Mann\",\"Stevie West\",\"Mrs. Jeromy Hahn\"],[\"Toni Prosacco\",\"Cesar Lueilwitz\",\"Misty Murray\",\"Asa Leffler\",\"Ada Dickens\",...,\"Mr. Lelah Langosh\",\"Kristy Boyle\",\"Dan Bartell DVM\",\"Kiel Goyette\",\"Ms. Samson Tromp\"]]\n",
-      "RSS (RAM): 27MB\n"
+      "name: [[\"Sydney Mante\",\"Kirk Price\",\"Bettie Abshire\",\"Rowan Franecki\",\"Lenora Ryan\",...,\"Edwin Heidenreich\",\"Dr. Paul Prosacco\",\"Uriah Berge\",\"Abbey Bernier\",\"Jorge Gulgowski\"],[\"Perry Corwin\",\"Mr. Wilma Rohan\",\"Rudy Ortiz\",\"Anastasia Abernathy\",\"Eugenia Johnston V\",...,\"Mozelle Schumm\",\"Ruben Schmeler\",\"Monty Blick\",\"Mia Littel\",\"Nat Daugherty\"],...,[\"Braxton McLaughlin\",\"Marlen Gerhold\",\"Flavie Flatley\",\"Berneice Bode\",\"Judson Koch\",...,\"Creola Schuster I\",\"Filomena Ledner\",\"Imogene Mann\",\"Stevie West\",\"Mrs. Jeromy Hahn\"],[\"Toni Prosacco\",\"Cesar Lueilwitz\",\"Misty Murray\",\"Asa Leffler\",\"Ada Dickens\",...,\"Mr. Lelah Langosh\",\"Kristy Boyle\",\"Dan Bartell DVM\",\"Kiel Goyette\",\"Ms. Samson Tromp\"]]\n"
      ]
     }
    ],
    "source": [
-    "print(node_work[0].to_table())\n",
-    "print(\"RSS (RAM): {}MB\".format(pa.total_allocated_bytes() >> 20))\n"
+    "print(node_work[0].to_table())"
    ]
   },
   {
@@ -219,11 +218,22 @@
     "<p> The Neo4j server expects the arrow relationship records to adhere to a specific order and schema:\n",
     "<ul>\n",
     "  <li>The first column represents the source node identifier</li>\n",
-    "  <li>The second column represents the target node identifier</li> \n",
+    "    <ul>\n",
+    "        <li>Supported types: <em><strong>integer, string<strong></em></li><br>\n",
+    "    </ul>\n",
+    "\n",
+    "  <li>The second column represents the target node identifier</li>\n",
+    "    <ul>\n",
+    "        <li>Supported types: <em><strong>integer, string<strong></em></li><br>\n",
+    "    </ul>\n",
     "  <li>The third column represents the relationship type</li>\n",
+    "    <ul>\n",
+    "        <li>Supported types: <em><strong>integer, string<strong></em></li><br>\n",
+    "    </ul>\n",
     "  <li>Any additional column is interpreted as a relationship property</li>  \n",
     "</ul>\n",
-    "<p>"
+    "More information can be found in <a href=\"https://neo4j.com/docs/graph-data-science/current/graph-project-apache-arrow/#arrow-send-relationships\">https://neo4j.com/docs/graph-data-science/current/graph-project-apache-arrow/#arrow-send-relationships</a>\n",
+    "</p>"
    ]
   },
   {
@@ -245,14 +255,12 @@
       "source_id: [[\"256491118\",\"159924485\",\"160433055\",\"54605431\",\"96458256\",...,\"63808864\",\"199643296\",\"10031018\",\"17674881\",\"226020022\"],[\"4974573\",\"267529786\",\"224513848\",\"70072286\",\"234764953\",...,\"153827556\",\"25659075\",\"182864331\",\"55842690\",\"143686528\"],...,[\"39401650\",\"96146312\",\"58511945\",\"197732027\",\"114344661\",...,\"32314439\",\"255818297\",\"258099850\",\"59014527\",\"204416417\"],[\"231652001\",\"27095873\",\"41225845\",\"141826693\",\"235003581\",...,\"150823173\",\"275616217\",\"251032936\",\"140177726\",\"198996541\"]]\n",
       "destination_id: [[\"22241322\",\"192489986\",\"265416634\",\"197803012\",\"95555652\",...,\"263933925\",\"29135552\",\"224563112\",\"97621313\",\"256065272\"],[\"134760853\",\"227638743\",\"122243685\",\"201854285\",\"85358721\",...,\"8332108\",\"159575361\",\"225733715\",\"218682897\",\"202368361\"],...,[\"92958081\",\"95291546\",\"163238293\",\"108259171\",\"52251500\",...,\"115126071\",\"50850031\",\"42751807\",\"204922812\",\"132760932\"],[\"220260281\",\"67744272\",\"81505693\",\"18392779\",\"63175429\",...,\"165577932\",\"245019672\",\"279351875\",\"79111643\",\"203637308\"]]\n",
       "type: [[\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",...,\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\"],[\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",...,\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\"],...,[\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",...,\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\"],[\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",...,\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\",\"FOLLOWS\"]]\n",
-      "connectedDate: [[\"2022-03-15\",\"2021-11-12\",\"2022-05-05\",\"2021-11-14\",\"2021-09-11\",...,\"2021-08-19\",\"2022-02-12\",\"2022-01-05\",\"2021-08-07\",\"2021-10-30\"],[\"2021-12-21\",\"2022-02-15\",\"2022-05-30\",\"2022-05-31\",\"2021-08-12\",...,\"2021-10-12\",\"2021-10-06\",\"2022-04-02\",\"2022-04-19\",\"2021-07-21\"],...,[\"2022-01-29\",\"2022-03-23\",\"2022-03-17\",\"2022-01-16\",\"2022-01-15\",...,\"2021-09-18\",\"2022-05-17\",\"2021-08-11\",\"2022-03-19\",\"2021-08-06\"],[\"2022-06-29\",\"2022-03-05\",\"2022-04-28\",\"2021-12-07\",\"2021-09-24\",...,\"2022-06-11\",\"2021-10-08\",\"2021-09-02\",\"2022-07-02\",\"2022-07-05\"]]\n",
-      "RSS (RAM): 52MB\n"
+      "connectedDate: [[\"2022-03-15\",\"2021-11-12\",\"2022-05-05\",\"2021-11-14\",\"2021-09-11\",...,\"2021-08-19\",\"2022-02-12\",\"2022-01-05\",\"2021-08-07\",\"2021-10-30\"],[\"2021-12-21\",\"2022-02-15\",\"2022-05-30\",\"2022-05-31\",\"2021-08-12\",...,\"2021-10-12\",\"2021-10-06\",\"2022-04-02\",\"2022-04-19\",\"2021-07-21\"],...,[\"2022-01-29\",\"2022-03-23\",\"2022-03-17\",\"2022-01-16\",\"2022-01-15\",...,\"2021-09-18\",\"2022-05-17\",\"2021-08-11\",\"2022-03-19\",\"2021-08-06\"],[\"2022-06-29\",\"2022-03-05\",\"2022-04-28\",\"2021-12-07\",\"2021-09-24\",...,\"2022-06-11\",\"2021-10-08\",\"2021-09-02\",\"2022-07-02\",\"2022-07-05\"]]\n"
      ]
     }
    ],
    "source": [
-    "print(relationship_work [0].to_table())\n",
-    "print(\"RSS (RAM): {}MB\".format(pa.total_allocated_bytes() >> 20))"
+    "print(relationship_work[0].to_table())"
    ]
   },
   {
@@ -260,11 +268,14 @@
    "id": "f166a418",
    "metadata": {},
    "source": [
-    "## Ingestion\n",
+    "## Ingestion Process\n",
     "\n",
-    "We build little work tasks for our worker pool.\n",
-    "\n",
-    "Each task contains the PyArrow ParquetDataset Fragment, each Fragment gets broken into RecordBatches of the size defined in our configuration"
+    "<p>\n",
+    "    <ul>\n",
+    "        <li>Create your <strong>Neo4jArrowClient</strong> with the defined configuration, this will allow you to orchestrate the graph database load</li><br>\n",
+    "        <li>We build work tasks for our worker pool, each task contains the PyArrow ParquetDataset Fragment, each Fragment gets broken into RecordBatches of the size defined in our configuration</li>\n",
+    "    </ul>    \n",
+    "</p>"
    ]
   },
   {
@@ -348,8 +359,25 @@
    "id": "381095f2",
    "metadata": {},
    "source": [
-    "#### 1. Start!\n",
-    "We send our `CREATE_DATABASE` signal, letting Neo4j know we are beginning our load."
+    "#### 1. Initializing the Import Process\n",
+    "<p>We send our <em><strong>CREATE_DATABASE</strong></em> signal, letting Neo4j know we are beginning our load.<br>\n",
+    "    <ul>\n",
+    "        <li>The action body is a JSON document containing metadata for the import process, defined in the below cell as import_config</li>\n",
+    "        <li>The server acknowledges creating the import process by sending a result JSON document which contains the name of the import process</li>\n",
+    "        <li>If an error occurs, e.g., if the graph already exists or if the server is not started, the client is informed accordingly.</li>\n",
+    "    </ul>\n",
+    "The complete table for the below configuration settings can be found here <a href=\"https://neo4j.com/docs/graph-data-science/current/graph-project-apache-arrow/#_creating_a_neo4j_database\">https://neo4j.com/docs/graph-data-science/current/graph-project-apache-arrow/#_creating_a_neo4j_database</a>\n",
+    "</p>\n",
+    "\n",
+    "##### 1a. Supported node identifier types\n",
+    "<p>\n",
+    "    <ul>\n",
+    "      <li>The <strong>id_type</strong> configuration parameter has two possible options <strong>INTEGER</strong> and <strong>STRING</strong>, with <strong>INTEGER</strong> being the default</li>\n",
+    "      <li>If set to <strong>INTEGER</strong>, the node id columns for both nodes and relationship records (sourceNodeId and targetNodeId) of your of your arrow tables, are expected to be represented as BigIntVector.</li>\n",
+    "      <li>For the <strong>STRING</strong> id type, the server expects the identifiers of your arrow tables to be represented as VarCharVector</li>\n",
+    "   </ul>\n",
+    "In both cases, the original id is being stored as a property on the imported nodes. The property key can be changed by the id_property config option.\n",
+    "</p>"
    ]
   },
   {
@@ -367,7 +395,17 @@
     }
    ],
    "source": [
-    "msg = client.create_database()\n",
+    "import_config = {\n",
+    "                \"name\": config['neo4j']['database'], \n",
+    "                \"concurrency\": config['neo4j']['concurrency'],\n",
+    "                \"high_io\": True,\n",
+    "                \"force\": True,\n",
+    "                \"record_format\": \"aligned\",\n",
+    "                \"id_property\": \"id\",\n",
+    "                \"id_type\": \"STRING\"\n",
+    "            }\n",
+    "\n",
+    "msg = client.create_database(config=import_config)\n",
     "print(f\"✅ Ready to load nodes for {msg['name']}\")"
    ]
   },
@@ -399,23 +437,25 @@
       "Using: 🚀 Neo4jArrowClient{neo4j@34.172.112.204:8491/users200m}\n",
       "Spawning 50 workers 🧑‍🏭 to process 57 dataset fragments 📋\n",
       "⚙️ Loading: [➶➶➶]\n",
-      "🏁 Completed in 24.8s\n"
+      "🏁 Completed in 25.63s\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sent: 280,737,646 nodes in 24.8s (~11,319,266 nodes/s, ~1854 MiB/s)\n"
+      "Sent: 280,737,646 nodes in 25.63s (~10,951,432 nodes/s, ~1794 MiB/s)\n"
      ]
     }
    ],
    "source": [
-    "node_results, timing = npq.fan_out(client, config['dataset']['node_parquet_files_uri'], config['worker']['arrow_table_size'], config['worker']['concurrency'])\n",
+    "node_results, timing = npq.fan_out(client, \n",
+    "                                   config['dataset']['node_parquet_files_uri'], \n",
+    "                                   config['worker']['arrow_table_size'], \n",
+    "                                   config['worker']['concurrency'])\n",
     "\n",
     "total_nodes = sum([x[\"rows\"] for x in node_results])\n",
     "total_bytes = sum([x[\"bytes\"] for x in node_results])\n",
-    "#print(f\"total bytes: {total_bytes}\")\n",
     "\n",
     "node_rate = int(total_nodes / timing)\n",
     "data_rate = int(total_bytes / timing) >> 20\n",
@@ -458,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "6579ae77",
    "metadata": {},
    "outputs": [
@@ -470,19 +510,22 @@
       "Using: 🚀 Neo4jArrowClient{neo4j@34.172.112.204:8491/users200m}\n",
       "Spawning 50 workers 🧑‍🏭 to process 310 dataset fragments 📋\n",
       "⚙️ Loading: [➶➶➶➶➶➶➶➶➶➶➶]\n",
-      "🏁 Completed in 192.34s\n"
+      "🏁 Completed in 187.44s\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sent: 1,547,592,061 relationships in 192.34s (~8,046,035 edges/s, ~1372 MiB/s)\n"
+      "Sent: 1,547,592,061 relationships in 187.44s (~8,256,298 edges/s, ~1408 MiB/s)\n"
      ]
     }
    ],
    "source": [
-    "edge_results, timing = npq.fan_out(client, config['dataset']['relationship_parquet_files_uri'], config['worker']['arrow_table_size'], config['worker']['concurrency'])\n",
+    "edge_results, timing = npq.fan_out(client, \n",
+    "                                   config['dataset']['relationship_parquet_files_uri'], \n",
+    "                                   config['worker']['arrow_table_size'], \n",
+    "                                   config['worker']['concurrency'])\n",
     "\n",
     "total_edges = sum([x[\"rows\"] for x in edge_results])\n",
     "total_bytes = sum([x[\"bytes\"] for x in edge_results])\n",
@@ -499,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "749a1e95",
    "metadata": {},
    "outputs": [
