--- a/neo4j_arrow_create_projection.ipynb
+++ b/neo4j_arrow_create_projection.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "%pip install --upgrade pyarrow==10.0"
+    "%pip install --user --upgrade pyarrow"
    ]
   },
   {
